--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 @charset "utf-8";
+body {
+    font-size:20px;
+}
 .container {
     display: flex;
     flex-direction: row;
@@ -7,10 +10,12 @@
 
 h1 {
     text-align: center;
+    font-size:30px;
 }
 
 .name {
     text-align: center;
+    font-size:25px;
 }
 
 .sendBtn {
