--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 @charset "utf-8";
 body {
     font-size:20px;
+    margin: 0;
+    background: skyblue;
 }
 .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    padding: 32px;
 }
 
 h1 {
@@ -28,27 +28,43 @@ h1 {
 }
 
 ul {
+    display: flex;
     list-style: none;
     padding: 0;
     text-align: center;
+    justify-content: space-around;
 }
 
 li {
     margin-bottom: 20px;
+    /* display: flex; */
 }
 
-.myChat,.yourChat {
-    display: flex;
-    flex-direction: column;    
+.pic img{
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
 }
+
+.text {
+    background: #fff;
+    border-radius: 8px;
+    padding: 8px 24px;
+    max-width: 60%;
+    line-height: 1.8;
+    margin: 30px 0;
+    margin-left: 10px;
+}
+
 #myFild{
-    background-color:burlywood;
-    padding-top: 10px;
+    padding: 0;
+    margin: 0;
 }
 
 #yourFild {
-    background-color: aquamarine;
-    padding-top: 10px;
+    padding: 0;
+    margin: 0;
+    flex-direction: row-reverse;
 }
 
 .command {
